Fix overflow caused by lack of min-height

--- a/frontend/src/DayPhase.scss
+++ b/frontend/src/DayPhase.scss
@@ -1,8 +1,10 @@
 @import 'common';
 
 .DayPhase {
+  flex: 1 1 0;
+  min-height: 0;
+
   display: flex;
-  flex: 1;
 
   &__vertical-gutter {
     // TODO: should be sized with some flex shit. flex: <max> <min> <prefferred>
