--- a/frontend/src/NightPhase.scss
+++ b/frontend/src/NightPhase.scss
@@ -2,12 +2,26 @@
 @import 'common';
 
 .NightPhase {
+  flex: 1 1 0;
+  min-height: 0;
+
   display: flex;
-  flex: 1;
 
   &__vertical-gutter {
     // TODO: should be sized with some flex shit. flex: <max> <min> <prefferred>
     height: 64px;
+  }
+
+  &__role,
+  &__team {
+    // TODO: color affiliation red for werewolf and green for good guy
+    @include boldPrompt;
+    // margin-bottom: 20px;
+    flex: 1 1 0;
+  }
+
+  &__description {
+    flex: 2 2 0;
   }
 
   &__column {
@@ -26,20 +40,13 @@
     @include boldPrompt;
   }
 
-  &__role,
-  &__team {
-    // TODO: color affiliation red for werewolf and green for good guy
-    @include boldPrompt;
-    margin-bottom: 20px;
-  }
-
   &__image {
     align-self: center;
     // ends up be 230 x 315
-    width: 230px;
-    height: auto;
+    width: auto;
+    height: 50%;
     // TODO: this should be justify-self: fill in remaining space
-    margin: 25px 10px;
+    // margin: 25px 10px;
     // box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2) inset;
     -webkit-filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
