--- a/frontend/src/common.scss
+++ b/frontend/src/common.scss
@@ -1,10 +1,10 @@
 @mixin boldPrompt {
   font-weight: 600;
-  padding-bottom: 12px;
+  // padding-bottom: 12px;
 }
 
 @mixin column {
-  flex: 1;
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
   height: 100%; // TODO: This is overflowing the viewport because the header takes up room
